<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <View
            android:id="@+id/fake_status_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/statusbar_view_height"
            android:background="@color/medium_sea_green" />


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:background="@color/medium_sea_green"
        >

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="match_parent">


                <TextView
                        android:text="@string/mine"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:id="@+id/tool_bar_mine"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"

                        android:layout_weight="1"/>
                <TextView
                        android:text="@string/music_room"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/tool_bar_music_room"
                        android:layout_weight="1"/>
                <TextView
                        android:text="@string/find"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/tool_bar_find" android:layout_weight="1"/>
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>



    <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>
